--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,14 @@
 }
 
 body {
-   background: rgb(233, 119, 119); 
-   background: linear-gradient(to right, rgb(214, 208, 208), rgb(233, 119, 119));
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   margin: 0;
-}
+    background: rgb(219, 215, 215); 
+    background: linear-gradient(to right, rgb(190, 182, 182), rgb(199, 103, 39));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+ }
 
 .pokemon_box{
     display: flex;
@@ -22,7 +22,7 @@ body {
 }
 
 .pokemon {
-    background-color: blanchedalmond;
+    background-color: rgb(206, 199, 134);
     border-radius: 20px;
     box-shadow: 0 3px 15px rgba(100,100,100,0.5);
     margin: 10px;
@@ -30,17 +30,93 @@ body {
     text-align: center;
 }
 
-.pokemon .img-container {
-    background-color: azure;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
+.grass {
+    background-color: rgb(8, 182, 8);
+}
+
+.normal {
+    background-color: rgb(189, 175, 175);
+}
+
+.psychic {
+    background-color: rgb(218, 63, 122);
+}
+
+.rock {
+    background-color: rgb(150, 111, 29);
+}
+
+.bug {
+    background-color: rgba(31, 97, 11, 0.658);
+}
+
+.water {
+    background-color: rgb(69, 117, 206);
+}
+
+.fire {
+    background-color: rgb(211, 58, 31);
+}
+
+.normal {
+    background-color: rgb(255, 255, 255);
+}
+
+.dark {
+    background-color: rgba(48, 32, 12, 0.856);
+}
+
+.ice {
+    background-color: #90d3f1;
+}
+
+.electric {
+    background-color: rgb(253, 253, 72);
+}
+
+.steel {
+    background-color: slategrey;
+}
+
+.ground {
+    background-color: rgb(143, 107, 7);
+}
+
+.poison {
+    background-color: rgb(177, 38, 84);
+}
+
+.fairy {
+    background-color: pink;
+}
+
+.pokemon:hover {
+    opacity: 70%;
+    border-radius: 20px;
+    box-shadow: 0 20px 50px rgba(29, 28, 28, 0.5);
+    margin: 10px;
+    padding: 20px;
     text-align: center;
 }
 
+.pokemon:hover .img-container {
+    animation: bounce 0.5s;
+    animation-direction: alternate;
+    animation-timing-function: cubic-bezier(.5, 0.05, 1, .5);
+    animation-iteration-count: infinite;
+}
+
+@keyframes bounce {
+    from {
+        transform: translate3d(0, 0, 0);
+    }
+    to {
+        transform: translate3d(0, 20px, 0);
+    }
+}
 .pokemon .img-container img {
     margin-top: 0px;
-
+    filter: drop-shadow(.5rem .5rem 0.5rem #000000);
 }
 
 .pokemon .info {
@@ -71,3 +147,4 @@ body {
     margin-top: 20px;
     margin-bottom: 10px;
 }
+
