--- a/styles.css
+++ b/styles.css
@@ -34,10 +34,6 @@ body {
     background-color: rgb(8, 182, 8);
 }
 
-.normal {
-    background-color: rgb(189, 175, 175);
-}
-
 .psychic {
     background-color: rgb(218, 63, 122);
 }
@@ -91,7 +87,6 @@ body {
 }
 
 .pokemon:hover {
-    opacity: 70%;
     border-radius: 20px;
     box-shadow: 0 20px 50px rgba(29, 28, 28, 0.5);
     margin: 10px;
@@ -111,7 +106,7 @@ body {
         transform: translate3d(0, 0, 0);
     }
     to {
-        transform: translate3d(0, 20px, 0);
+        transform: translate3d(0, -20px, 0);
     }
 }
 .pokemon .img-container img {
@@ -134,6 +129,38 @@ body {
     margin: 15px 0 7px;
     letter-spacing: 1px;
 }
+
+.pokemon .name {
+    position: relative;
+    color: #000;
+    text-decoration: none;
+  }
+  
+  .pokemon:hover .name {
+    color: rgb(255, 246, 246);
+  }
+
+  .normal:hover .name, .electric:hover .name, .fairy:hover .name, .fighting:hover .name, .ghost:hover .name, .ice:hover .name, .dragon:hover .name{
+    color: black;
+  }
+  
+  
+  .pokemon .name::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+  
+  .pokemon:hover .name::before {
+    transform: scaleX(1);
+  }
 
 .is-hidden { display: none; }
 
